2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.8.1
	* configure.ac

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added version number to man page. Updated copyright year in man
	page.
	* doc/aria2c.1.txt

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten toTagString
	* src/NameMatchOptionHandler.cc
	* test/OptionHandlerTest.cc

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added dir and files key to the response struct of aria2.tellStatus
	XML-RPC method.  The value associated with files key is the list
	of files. Its element is the same struct used in aria2.getFiles
	XML-RPC method.  Added uris key to the response struct of
	aria2.getFiles XML-RPC method.  The value associated with uris key
	is the list of URIs. Its element is the same struct used in
	aria2.getUris XML-RPC method.
	* doc/aria2c.1.txt
	* src/XmlRpcMethodImpl.cc
	* test/XmlRpcMethodTest.cc

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added aria2.getSessionInfo XML-RPC method.  This method returns a
	struct containing Session ID, which is generated each time when
	aria2 is invoked.
	* doc/aria2c.1.txt
	* doc/xmlrpc/aria2rpc
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved generateRandomKey() from bittorrent_helper to util.
	* src/DHTBucket.cc
	* src/DHTNode.cc
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* src/util.cc
	* src/util.h

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc about GID.
	* doc/aria2c.1.txt

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
