@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 01/17/2010
+.\"      Date: 01/18/2010
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2 1.8.1
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "01/17/2010" "Aria2 1\&.8\&.1" "Aria2 Manual"
+.TH "ARIA2C" "1" "01/18/2010" "Aria2 1\&.8\&.1" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -2539,6 +2539,23 @@ options={ "dir" => "/downloads" }
 result=client\&.call("aria2\&.addUri", [ "http://localhost/aria2\&.tar\&.bz2" ], options)
 
 pp result
+.fi
+.if n \{\
+.RE
+.\}
+.sp
+If you are a Python lover, you can use xmlrpclib(for Python3\&.x, use xmlrpc\&.client instead) to interact with aria2\&.
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+import xmlrpclib
+from pprint import pprint
+
+s = xmlrpclib\&.ServerProxy("http://localhost:6800/rpc")
+r = s\&.aria2\&.addUri(["http://localhost/aria2\&.tar\&.bz2"], {"dir":"/downloads"})
+pprint(r)
 .fi
 .if n \{\
 .RE
